tests/parser/function-declaration-right-paren-error.stderr
error: expected ')'
 --> $DIR/function-declaration-right-paren-error.lox:1:8
  |
1 | fn f(x {}
  |        ^
